components/Header.module.css
.main {
  position: relative;
  width: 100vw;
  max-width: 100vw;
  overflow: hidden;
}

.aboveBG {
  position: absolute;
  margin-left: auto;
  left: 0;
  right: 0;
  margin-right: auto;
  text-align: center;
}

.background {
  transform: rotate(-2deg);
  width: 200vw;
  height: 100vh;
  /* border: 1px solid; */
  /* overflow: hidden; */
  position: relative;
  background-position-y: -10;
  /* background-repeat: repeat-x; */
  margin-top: -10px;
  margin-left: -20px;
}

.background::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 200vw;
  height: 100vh;
  background-size: 200px;
  /* background-repeat: repeat-x; */
  background: url('../public/hero-background-repeat.png');
}

.header {
  font-size: 80px;
  margin-top: 10rem;
  color: white;
  font-weight: 800;
  padding: 24px;
  line-height: 72px;
  font-family: 'Cartridge';
  font-feature-settings: 'ss01';
  /* text-shadow: -6px -6px 0 , 6px -6px 0 #491849, -6px 6px 0 #491849, */
  -webkit-font-smoothing: antialiased;
  text-shadow: -6px -6px 0 #491849, 0 -6px 0 #491849, 6px -6px 0 #491849,
    6px 0 0 #491849, 6px 6px 0 #491849, 0 6px 0 #491849, -6px 6px 0 #491849,
    -6px 0 0 #491849;

  /* -webkit-text-stroke: 0.05rem #391849; */
}

.headerContainer {
  width: 50%;
}

@media (max-width: 650px) {
  .header {
    font-size: 32px;
  }
}

/*   TODO: FIX WHITESPACE AROUND BACKGROUND*
    TODO: add font and stroke background to it - how do I get the special font characters?
*/

